Silence -Wformat-truncation warnings

Summary:
Add a few bytes to a small arrays on stack in order to make compiler
happy. Those warnings are invalid in this context (as long as terminal
width and height are not larger than 8-digits-long number).

BUG: 394565

Test Plan:
* Build Konsole with GCC 8 and `-Wformat-truncation` flag

Expected result: no format-truncation warnings
Actual result: three format-truncation warnings appear

Reviewers: #konsole, hindenburg

Reviewed By: #konsole, hindenburg

Subscribers: hindenburg, konsole-devel, #konsole

Tags: #konsole

Differential Revision: https://phabricator.kde.org/D13080